--- a/index.html
+++ b/index.html
@@ -2,15 +2,9 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Project</title>
-  <link rel="stylesheet" type="text/css" href="dist/css/style.min.css">
+	<title>Template starter</title>
 </head>
 <body>
-	<h3 id="hw">
-       Hello World!
-  </h3>
-  <script type="text/javascript" src="dist/js/main.min.js"></script>
-  <!-- Livereload Script -->
-  <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
+	<h3>Hello World!</h3>
 </body>
 </html>
