--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Template starter</title>
+  <style type="text/css">
+    body { font-family: Arial, Helvetica, 'sans'; padding: 20px; text-align: center; }
+    code { background-color: #e5e5e5; padding: 3px;}
+  </style>
 </head>
 <body>
-	<h3>Hello World!</h3>
+  <p>Hi, <br>it seems that you didn't do <code>gulp</code> yet on your Terminal App</p>
 </body>
 </html>
