--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
   </style>
 </head>
 <body>
-  <p>Hi, <br>it seems that you didn't do <code>gulp</code> yet on your Terminal App</p>
+  <p>Hi, <br>see your <code>dist</code> proyect <a href="dist/index.html">here</a></p>
 </body>
 </html>
