--- a/index.html
+++ b/index.html
@@ -1,14 +1,123 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Template starter</title>
-  <style type="text/css">
-    body { font-family: Arial, Helvetica, 'sans'; padding: 20px; text-align: center; }
-    code { background-color: #e5e5e5; padding: 3px;}
-  </style>
-</head>
-<body>
-  <p>Hi, <br>see your <code>dist</code> proyect <a href="dist/index.html">here</a></p>
-</body>
+<html>
+  <head>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8">
+    <title>Sassisfaction :: Awesome Sass Resources</title>
+    <meta name="description" content="A place to share awesome Sass resources. It's easy to search stuff and it's really simple to contribute.">
+    <link rel="shortcut icon" href="/assets/favicon.ico">
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans:400,700" rel="stylesheet" type="text/css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:400,300,500" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="/styles.css">
+  </head>
+  <body>
+    <header class="header">
+      <div class="container">
+        <div class="main-icon">
+          <svg>
+            <use xlink:href="/assets/symbols.svg#main-logo"></use>
+          </svg>
+          <h1 class="big-title text--truncate"><span class="color-pink">Sass</span>isfaction</h1>
+          <p class="copy">awesome<span class="color-pink">re</span>s<span class="color-pink">our</span>c<span class="color-pink">e</span>ss</p>
+        </div>
+      </div>
+    </header>
+    <input type="checkbox" id="input-layout">
+    <label for="input-layout" class="items-layout">
+      <svg class="layout-th">
+        <use xlink:href="assets/symbols.svg#icon-th"></use>
+      </svg>
+      <svg class="layout-list">
+        <use xlink:href="/assets/symbols.svg#icon-list"></use>
+      </svg>
+    </label>
+    <section id="items" class="section row">
+      <div class="container">
+        <div class="items">
+          <div class="items__item half fake"><a href="#0" class="item-image">
+              <svg class="alt-logo">
+                <use xlink:href="/assets/symbols.svg#alt-logo"></use>
+              </svg></a>
+            <div class="item-content">
+              <h3 class="item-title"> <a href="#0">Title</a></h3>
+              <p class="item-desc">Lorem ipsum dolor sit amet, consectetur adipisicing.</p>
+              <div class="item-meta">
+                <div class="item-tags">
+                  <button>tag</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="items__item half fake"><a href="#0" class="item-image">
+              <svg class="alt-logo">
+                <use xlink:href="/assets/symbols.svg#alt-logo"></use>
+              </svg></a>
+            <div class="item-content">
+              <h3 class="item-title"> <a href="#0">Title</a></h3>
+              <p class="item-desc"> Porro odit animi maiores magnam et quisquam delectus ipsam ratione.</p>
+              <div class="item-meta">
+                <div class="item-tags">
+                  <button>tag</button>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="items__item half fake"><a href="#0" class="item-image">
+              <svg class="alt-logo">
+                <use xlink:href="/assets/symbols.svg#alt-logo"></use>
+              </svg></a>
+            <div class="item-content">
+              <h3 class="item-title"> <a href="#0">Title</a></h3>
+              <p class="item-desc"> Eveniet quos asperiores, optio amet consectetur delectus fugit, officia ut.</p>
+              <div class="item-meta">
+                <div class="item-tags">
+                  <button>tag</button>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer class="footer">
+      <p>Made with <span>❤ </span> and React by <a href="https://twitter.com/elrumordelaluz">elrumordelaluz </a></p>
+      <p> <a href="https://github.com/elrumordelaluz/Sassisfaction/blob/gh-pages/sassisfaction.json"> <span>Submit Resources </span></a>or <a href="https://github.com/elrumordelaluz/Sassisfaction/issues">Tell some Issue</a></p>
+      <p><a href="https://twitter.com/share" data-via="elrumordelaluz" class="twitter-share-button">Tweet</a>
+        <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
+        <iframe src="https://ghbtns.com/github-btn.html?user=elrumordelaluz&amp;repo=Sassisfaction&amp;type=star&amp;count=true" frameborder="0" scrolling="0" width="76" height="20px"></iframe>
+      </p>
+    </footer>
+    <script src="/bundle.js"></script>
+    <script type="text/javascript" src="/assets/pe-scrollchange.min.js"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+      ga('create', 'UA-55167683-4', 'auto');
+      ga('send', 'pageview');
+      var docElem = window.document.documentElement;
+      function scrollY() {
+        return window.pageYOffset || docElem.scrollTop;
+      }
+      document.addEventListener("DOMContentLoaded", function() {
+        peScrollChange.init({
+          elem: '.header',
+          trigger: 300,
+          classesToChange: 'top'
+        })
+        var header = document.querySelector('.header');
+        window.addEventListener('scroll', function(){
+          var opacityValue;
+          opacityValue = 1 - scrollY() / 315;
+          if(!header.classList.contains('top')) {
+            document.querySelector('.main-icon').style.opacity = opacityValue;
+          } else {
+            document.querySelector('.main-icon').style.opacity = 1;
+          }
+        }, false);
+      });
+    </script>
+  </body>
 </html>
+
